feat: test flows
Took 2 hours 57 minutes